--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta charset="UTF-8">
 </head>
 <body>
-   <h1>ポップアップメッセージ</h1>
-   <p>テスト</p>
+   <h1>　お支払いありがとうございました。　</h1>
+   <p> *(嘘です) </p>
    <script>
-      alert(".今すぐ10000000円払ってください。 ");
+      alert("今すぐ10000000円払ってください。 ");
    </script>
 </body>
 </html>
